// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/virtualized-table-renderers/itemNameCellRenderer should render a itemNameCell 1`] = `
<span
  className="bdl-ItemNameCell"
  title="fancy.jpg"
>
  <FileIcon
    dimension={32}
    extension="jpg"
  />
  <span
    className="bdl-ItemNameCell-name"
  >
    fancy.jpg
  </span>
</span>
`;

exports[`features/virtualized-table-renderers/itemNameCellRenderer should render external file name when isExternal is true 1`] = `
<span
  className="bdl-ItemNameCell"
  title={
    Object {
      "defaultMessage": "External File",
      "id": "boxui.features.VirtualizedTableRenderers.externalFile",
    }
  }
>
  <FileIcon
    dimension={32}
    extension="jpg"
  />
  <span
    className="bdl-ItemNameCell-name is-external"
  >
    <Component />
  </span>
</span>
`;
